// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly with all selected 1`] = `
<DocumentFragment>
  .cache-o9b44e-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-o9b44e-StyledContainer .etyrq8m4 {
  height: 32px;
  width: 32px;
}

.cache-o9b44e-StyledContainer .etyrq8m5 {
  width: 32px;
  white-space: nowrap;
}

.cache-o9b44e-StyledContainer .etyrq8m1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-ja0taa-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #149a7b;
  background-color: #eafffb;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  fill: #149a7b;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-egoqg5-StyledText-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-epigh9-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #390171;
  background-color: #eeeeff;
}

.cache-197m6sv-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-o9b44e-StyledContainer etyrq8m0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-ja0taa-StyledStep etyrq8m4"
      >
        <svg
          class="etyrq8m2 etwatq50 cache-1509w7j-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1onazp5-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-ja0taa-StyledStep etyrq8m4"
      >
        <svg
          class="etyrq8m2 etwatq50 cache-1509w7j-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-1onazp5-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-epigh9-StyledStep etyrq8m4"
      >
        <span
          class="cache-197m6sv-StyledText e1tg3t120"
        >
          3
        </span>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with animation 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-o9b44e-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-o9b44e-StyledContainer .etyrq8m4 {
  height: 32px;
  width: 32px;
}

.cache-o9b44e-StyledContainer .etyrq8m5 {
  width: 32px;
  white-space: nowrap;
}

.cache-o9b44e-StyledContainer .etyrq8m1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-ja0taa-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #149a7b;
  background-color: #eafffb;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  fill: #149a7b;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-egoqg5-StyledText-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-epigh9-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #390171;
  background-color: #eeeeff;
}

.cache-197m6sv-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-prcay6-StyledLine-loadingStyle {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-prcay6-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-td9xqz-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
  background-color: transparent;
  border: 1px solid #d4dae7;
}

.cache-1bqee10-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qzmw7d-StyledText-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-o9b44e-StyledContainer etyrq8m0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-ja0taa-StyledStep etyrq8m4"
      >
        <svg
          class="etyrq8m2 etwatq50 cache-1509w7j-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1onazp5-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-epigh9-StyledStep etyrq8m4"
      >
        <span
          class="cache-197m6sv-StyledText e1tg3t120"
        >
          2
        </span>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-prcay6-StyledLine-loadingStyle etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-td9xqz-StyledStep etyrq8m4"
      >
        <span
          class="cache-1bqee10-StyledText e1tg3t120"
        >
          3
        </span>
      </div>
      <span
        class="etyrq8m3 cache-qzmw7d-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-o9b44e-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-o9b44e-StyledContainer .etyrq8m4 {
  height: 32px;
  width: 32px;
}

.cache-o9b44e-StyledContainer .etyrq8m5 {
  width: 32px;
  white-space: nowrap;
}

.cache-o9b44e-StyledContainer .etyrq8m1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-epigh9-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #390171;
  background-color: #eeeeff;
}

.cache-197m6sv-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-egoqg5-StyledText-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-rgwnp4-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-rgwnp4-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
}

.cache-td9xqz-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
  background-color: transparent;
  border: 1px solid #d4dae7;
}

.cache-1bqee10-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qzmw7d-StyledText-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-o9b44e-StyledContainer etyrq8m0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-epigh9-StyledStep etyrq8m4"
      >
        <span
          class="cache-197m6sv-StyledText e1tg3t120"
        >
          1
        </span>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-rgwnp4-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-td9xqz-StyledStep etyrq8m4"
      >
        <span
          class="cache-1bqee10-StyledText e1tg3t120"
        >
          2
        </span>
      </div>
      <span
        class="etyrq8m3 cache-qzmw7d-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-rgwnp4-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-td9xqz-StyledStep etyrq8m4"
      >
        <span
          class="cache-1bqee10-StyledText e1tg3t120"
        >
          3
        </span>
      </div>
      <span
        class="etyrq8m3 cache-qzmw7d-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with selected prop 1`] = `
<DocumentFragment>
  .cache-o9b44e-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-o9b44e-StyledContainer .etyrq8m4 {
  height: 32px;
  width: 32px;
}

.cache-o9b44e-StyledContainer .etyrq8m5 {
  width: 32px;
  white-space: nowrap;
}

.cache-o9b44e-StyledContainer .etyrq8m1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-ja0taa-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #149a7b;
  background-color: #eafffb;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  fill: #149a7b;
}

.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon.cache-1509w7j-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-egoqg5-StyledText-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-epigh9-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #390171;
  background-color: #eeeeff;
}

.cache-197m6sv-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-rgwnp4-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-rgwnp4-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
}

.cache-td9xqz-StyledStep {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
  background-color: transparent;
  border: 1px solid #d4dae7;
}

.cache-1bqee10-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qzmw7d-StyledText-StyledText {
  color: #b2b6c3;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-o9b44e-StyledContainer etyrq8m0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-ja0taa-StyledStep etyrq8m4"
      >
        <svg
          class="etyrq8m2 etwatq50 cache-1509w7j-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1onazp5-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-epigh9-StyledStep etyrq8m4"
      >
        <span
          class="cache-197m6sv-StyledText e1tg3t120"
        >
          2
        </span>
      </div>
      <span
        class="etyrq8m3 cache-egoqg5-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-rgwnp4-StyledLine etyrq8m1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer etyrq8m5"
    >
      <div
        class="cache-td9xqz-StyledStep etyrq8m4"
      >
        <span
          class="cache-1bqee10-StyledText e1tg3t120"
        >
          3
        </span>
      </div>
      <span
        class="etyrq8m3 cache-qzmw7d-StyledText-StyledText e1tg3t120"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
    <div
      class="cache-rgwnp4-StyledLine etyrq8m1"
    />
  </div>
</DocumentFragment>
`;
